# bf_cranelift

./: .gitignore  Cargo.toml
bf_programs/: test_1.bf
src/: _opt.rs  bf.rs  bf_ir.rs  bf_ir2.rs  byte_chan.rs  compile_cranelift.rs  interpret.rs  io_utils.rs  lib.rs  main.rs  test_suite.rs
src/bf_ffi/: Handshake.md  host.rs  mod.rs  std_features.rs  types.rs
src/opt/: peephole.rs
src/wasm2bf/: mod.rs
