[package]
name = "bf_cranelift"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bimap = "0.6.3"
cranelift = "0.108.1"
cranelift-jit = "0.108.1"
cranelift-module = "0.108.1"
smol_str = "0.2.2"
# os_str_bytes = "7.0.0"
target-lexicon = "0.12.14"
utf8-read = "0.4.0"
wasmparser = "0.209.1"
byte_chan_active = { git = "https://github.com/Bobxcat/byte_chan_active.git", rev = "07202b0caa07e35bd9c24d2eafd4d42eb8be6e72" }
enum-map = "2.7.3"

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 3
# lto = true
